fix image overflow

--- a/src/styles/_movieSceneItem.scss
+++ b/src/styles/_movieSceneItem.scss
@@ -3,11 +3,13 @@
   flex-direction: column;
   align-items: center;
   border: solid 5px crimson;
+  border-radius: 20px;
   background-color: hsl(349, 100%, 90%);
   width: 240px;
-  height: 500px;
+  height: 550px;
   margin: 5px;
   color: grey;
+  overflow: hidden;
 }
 .posterImage {
   width: 241px;
@@ -17,4 +19,7 @@
   text-decoration: none;
   color: crimson;
   font-weight: bold;
+}
+.textLine {
+  margin: 5px;
 }
